<package format="3">
  <name>ros2_block_bt</name>
  <version>0.1.0</version>
  <description>ROS2 behavior tree using py_trees_ros</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

