<package format="3">
  <name>ros2_block_bt</name>
  <version>0.1.0</version>
  <description>ROS2 behavior tree using py_trees_ros</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>py_trees_ros_interfaces</depend>
  <depend>rclpy</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>

<!--  <exec_depend>rclpy</exec_depend>-->
<!--  <exec_depend>message_filters</exec_depend>-->
<!--  <exec_depend>sensor_msgs</exec_depend>-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

